--- a/Rfoof/Rfoof/View/ProductCell.xib
+++ b/Rfoof/Rfoof/View/ProductCell.xib
@@ -10,97 +10,64 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="282" id="KGk-i7-Jjw" customClass="ProductCell" customModule="Rfoof" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="385" height="282"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="350" id="KGk-i7-Jjw" customClass="ProductCell" customModule="Rfoof" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="385" height="350"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="385" height="282"/>
+                <rect key="frame" x="0.0" y="0.0" width="385" height="350"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="sX5-hP-urK">
-                        <rect key="frame" x="0.0" y="7" width="385" height="279"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="book.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="5DL-qP-oio">
+                        <rect key="frame" x="0.0" y="0.5" width="385" height="349"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    </imageView>
+                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9YY-nb-Sr1">
+                        <rect key="frame" x="0.0" y="214" width="385" height="136"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="oKv-Yl-UkV">
-                                <rect key="frame" x="0.0" y="0.0" width="385" height="151"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" spacing="23" translatesAutoresizingMaskIntoConstraints="NO" id="cQf-E5-jZx">
+                                <rect key="frame" x="8" y="47" width="383" height="60"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="gjI-Du-gEo">
-                                        <rect key="frame" x="0.0" y="0.0" width="385" height="151"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="scribble" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="h02-pM-BP6">
+                                        <rect key="frame" x="0.0" y="0.0" width="60" height="59"/>
+                                        <color key="backgroundColor" systemColor="systemGreenColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="60" id="yEq-CW-sWG"/>
+                                            <constraint firstAttribute="height" constant="60" id="yQg-fC-xrb"/>
+                                        </constraints>
+                                    </imageView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="ooV-wT-p8r">
+                                        <rect key="frame" x="83" y="0.5" width="300" height="59.5"/>
                                         <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="book.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="5DL-qP-oio">
-                                                <rect key="frame" x="0.0" y="0.5" width="385" height="150"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E6B-7u-jih">
+                                                <rect key="frame" x="0.0" y="0.0" width="300" height="25"/>
+                                                <color key="backgroundColor" systemColor="systemPinkColor"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="151" id="Fty-dZ-zDd"/>
-                                                    <constraint firstAttribute="width" constant="385" id="LTD-yV-0TA"/>
+                                                    <constraint firstAttribute="width" constant="300" id="W5j-Y3-43i"/>
+                                                    <constraint firstAttribute="height" constant="25" id="vdY-ri-33E"/>
                                                 </constraints>
-                                            </imageView>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kpf-HN-sPT">
+                                                <rect key="frame" x="0.0" y="39" width="300" height="20.5"/>
+                                                <color key="backgroundColor" systemColor="systemTealColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="25" id="E0c-sb-Npk"/>
+                                                    <constraint firstAttribute="width" constant="300" id="XqP-bk-3V9"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
                                         </subviews>
                                     </stackView>
                                 </subviews>
                             </stackView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="O97-Lc-DEg">
-                                <rect key="frame" x="0.0" y="151" width="385" height="128"/>
-                                <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="KwR-Sh-1bt">
-                                        <rect key="frame" x="8" y="23" width="361" height="93"/>
-                                        <subviews>
-                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="bLH-Sl-bbm">
-                                                <rect key="frame" x="10" y="10" width="58" height="83"/>
-                                                <subviews>
-                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="scribble" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="h02-pM-BP6">
-                                                        <rect key="frame" x="0.0" y="0.0" width="58" height="82"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="54" id="0MZ-XN-GqC"/>
-                                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="58" id="bDL-Bz-IOq"/>
-                                                            <constraint firstAttribute="width" constant="58" id="fTR-wu-Qt1"/>
-                                                        </constraints>
-                                                    </imageView>
-                                                </subviews>
-                                            </stackView>
-                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="31" translatesAutoresizingMaskIntoConstraints="NO" id="XId-Kx-kKu">
-                                                <rect key="frame" x="78" y="10" width="273" height="83"/>
-                                                <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E6B-7u-jih">
-                                                        <rect key="frame" x="0.0" y="0.0" width="273" height="26"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="width" constant="273" id="4jF-X9-x1S"/>
-                                                            <constraint firstAttribute="height" constant="26" id="O3k-Cv-G1Z"/>
-                                                        </constraints>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                        <nil key="textColor"/>
-                                                        <nil key="highlightedColor"/>
-                                                    </label>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kpf-HN-sPT">
-                                                        <rect key="frame" x="0.0" y="57" width="273" height="26"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="height" constant="26" id="Ure-W8-GhK"/>
-                                                            <constraint firstAttribute="width" constant="273" id="uba-AI-UgP"/>
-                                                        </constraints>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                        <nil key="textColor"/>
-                                                        <nil key="highlightedColor"/>
-                                                    </label>
-                                                </subviews>
-                                            </stackView>
-                                        </subviews>
-                                        <constraints>
-                                            <constraint firstItem="bLH-Sl-bbm" firstAttribute="top" secondItem="KwR-Sh-1bt" secondAttribute="top" constant="10" id="3lW-LW-McR"/>
-                                            <constraint firstItem="bLH-Sl-bbm" firstAttribute="leading" secondItem="KwR-Sh-1bt" secondAttribute="leading" constant="10" id="HEV-gO-ggd"/>
-                                            <constraint firstItem="XId-Kx-kKu" firstAttribute="leading" secondItem="bLH-Sl-bbm" secondAttribute="trailing" constant="10" id="MN8-FR-a77"/>
-                                            <constraint firstItem="XId-Kx-kKu" firstAttribute="top" secondItem="KwR-Sh-1bt" secondAttribute="top" constant="10" id="YhA-7g-X0V"/>
-                                            <constraint firstAttribute="trailing" secondItem="XId-Kx-kKu" secondAttribute="trailing" constant="10" id="dfS-xw-qWq"/>
-                                        </constraints>
-                                    </stackView>
-                                </subviews>
-                                <color key="backgroundColor" systemColor="systemGray2Color"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="128" id="216-g9-mne"/>
-                                    <constraint firstItem="KwR-Sh-1bt" firstAttribute="leading" secondItem="O97-Lc-DEg" secondAttribute="leadingMargin" id="Thf-jZ-OK5"/>
-                                    <constraint firstAttribute="width" constant="385" id="hVl-Dw-xhp"/>
-                                    <constraint firstItem="KwR-Sh-1bt" firstAttribute="top" secondItem="O97-Lc-DEg" secondAttribute="top" constant="23" id="kX5-g1-DnI"/>
-                                </constraints>
-                            </view>
                         </subviews>
-                    </stackView>
+                        <color key="backgroundColor" systemColor="systemBrownColor"/>
+                    </view>
                 </subviews>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -110,14 +77,23 @@
                 <outlet property="userImageView" destination="h02-pM-BP6" id="CIc-NO-uEQ"/>
                 <outlet property="userNameLabel" destination="E6B-7u-jih" id="7E5-MJ-JPV"/>
             </connections>
-            <point key="canvasLocation" x="150" y="-15.401785714285714"/>
+            <point key="canvasLocation" x="151.44927536231884" y="-55.580357142857139"/>
         </tableViewCell>
     </objects>
     <resources>
         <image name="book.circle.fill" catalog="system" width="128" height="121"/>
         <image name="scribble" catalog="system" width="128" height="118"/>
-        <systemColor name="systemGray2Color">
-            <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <systemColor name="systemBrownColor">
+            <color red="0.63529411764705879" green="0.51764705882352946" blue="0.36862745098039218" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemPinkColor">
+            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemTealColor">
+            <color red="0.18823529411764706" green="0.69019607843137254" blue="0.7803921568627451" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
