--- a/Rfoof/Rfoof/View/ProductCell.xib
+++ b/Rfoof/Rfoof/View/ProductCell.xib
@@ -17,48 +17,35 @@
                 <rect key="frame" x="0.0" y="0.0" width="385" height="350"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="book.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="5DL-qP-oio">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="book.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="5DL-qP-oio">
                         <rect key="frame" x="0.0" y="0.5" width="385" height="349"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     </imageView>
-                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9YY-nb-Sr1">
-                        <rect key="frame" x="0.0" y="214" width="385" height="136"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <view alpha="0.75" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9YY-nb-Sr1">
+                        <rect key="frame" x="0.0" y="254" width="385" height="96"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" spacing="23" translatesAutoresizingMaskIntoConstraints="NO" id="cQf-E5-jZx">
-                                <rect key="frame" x="8" y="47" width="383" height="60"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="f6J-hg-Y7v">
+                                <rect key="frame" x="8" y="8" width="369" height="80"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="scribble" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="h02-pM-BP6">
-                                        <rect key="frame" x="0.0" y="0.0" width="60" height="59"/>
-                                        <color key="backgroundColor" systemColor="systemGreenColor"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="CFa-XD-ARG">
+                                        <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="60" id="yEq-CW-sWG"/>
-                                            <constraint firstAttribute="height" constant="60" id="yQg-fC-xrb"/>
+                                            <constraint firstAttribute="height" constant="80" id="owZ-jh-OmO"/>
+                                            <constraint firstAttribute="width" constant="80" id="toe-Dk-dQm"/>
                                         </constraints>
                                     </imageView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="ooV-wT-p8r">
-                                        <rect key="frame" x="83" y="0.5" width="300" height="59.5"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="YT9-5H-jIs">
+                                        <rect key="frame" x="100" y="19.5" width="269" height="41"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E6B-7u-jih">
-                                                <rect key="frame" x="0.0" y="0.0" width="300" height="25"/>
-                                                <color key="backgroundColor" systemColor="systemPinkColor"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="width" constant="300" id="W5j-Y3-43i"/>
-                                                    <constraint firstAttribute="height" constant="25" id="vdY-ri-33E"/>
-                                                </constraints>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LCx-NA-qpy">
+                                                <rect key="frame" x="0.0" y="0.0" width="269" height="20.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <nil key="textColor"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kpf-HN-sPT">
-                                                <rect key="frame" x="0.0" y="39" width="300" height="20.5"/>
-                                                <color key="backgroundColor" systemColor="systemTealColor"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="25" id="E0c-sb-Npk"/>
-                                                    <constraint firstAttribute="width" constant="300" id="XqP-bk-3V9"/>
-                                                </constraints>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rGT-El-DQh">
+                                                <rect key="frame" x="0.0" y="20.5" width="269" height="20.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <nil key="textColor"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
@@ -66,34 +53,40 @@
                                 </subviews>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBrownColor"/>
+                        <color key="backgroundColor" systemColor="labelColor"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="f6J-hg-Y7v" secondAttribute="bottom" constant="8" id="ihE-Vr-qXJ"/>
+                            <constraint firstItem="f6J-hg-Y7v" firstAttribute="top" secondItem="9YY-nb-Sr1" secondAttribute="top" constant="8" id="okz-vQ-LmN"/>
+                            <constraint firstItem="f6J-hg-Y7v" firstAttribute="leading" secondItem="9YY-nb-Sr1" secondAttribute="leading" constant="8" id="s0t-JP-Tpc"/>
+                            <constraint firstAttribute="trailing" secondItem="f6J-hg-Y7v" secondAttribute="trailing" constant="8" id="z6V-6y-XxB"/>
+                        </constraints>
                     </view>
                 </subviews>
+                <constraints>
+                    <constraint firstAttribute="trailing" secondItem="9YY-nb-Sr1" secondAttribute="trailing" id="2R8-Q9-gJ5"/>
+                    <constraint firstAttribute="bottom" secondItem="5DL-qP-oio" secondAttribute="bottom" id="5xk-Pm-FYk"/>
+                    <constraint firstItem="9YY-nb-Sr1" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="M4m-Xh-xvV"/>
+                    <constraint firstItem="9YY-nb-Sr1" firstAttribute="top" relation="greaterThanOrEqual" secondItem="H2p-sc-9uM" secondAttribute="top" constant="214" id="Sxh-U2-AEE"/>
+                    <constraint firstItem="5DL-qP-oio" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="b2f-Cb-7Um"/>
+                    <constraint firstAttribute="trailing" secondItem="5DL-qP-oio" secondAttribute="trailing" id="hCd-pO-xwZ"/>
+                    <constraint firstAttribute="bottom" secondItem="9YY-nb-Sr1" secondAttribute="bottom" id="kPe-fR-9Hi"/>
+                    <constraint firstItem="5DL-qP-oio" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="tVb-yc-MNB"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="ProductImageView" destination="5DL-qP-oio" id="8Da-tA-lPi"/>
-                <outlet property="ProductTitleLabel" destination="kpf-HN-sPT" id="1cP-e7-4hd"/>
-                <outlet property="userImageView" destination="h02-pM-BP6" id="CIc-NO-uEQ"/>
-                <outlet property="userNameLabel" destination="E6B-7u-jih" id="7E5-MJ-JPV"/>
+                <outlet property="ProductTitleLabel" destination="rGT-El-DQh" id="7gz-tl-pBz"/>
+                <outlet property="userImageView" destination="CFa-XD-ARG" id="vcQ-S3-hR6"/>
+                <outlet property="userNameLabel" destination="LCx-NA-qpy" id="FPt-9T-Gjg"/>
             </connections>
             <point key="canvasLocation" x="151.44927536231884" y="-55.580357142857139"/>
         </tableViewCell>
     </objects>
     <resources>
         <image name="book.circle.fill" catalog="system" width="128" height="121"/>
-        <image name="scribble" catalog="system" width="128" height="118"/>
-        <systemColor name="systemBrownColor">
-            <color red="0.63529411764705879" green="0.51764705882352946" blue="0.36862745098039218" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemGreenColor">
-            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemPinkColor">
-            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemTealColor">
-            <color red="0.18823529411764706" green="0.69019607843137254" blue="0.7803921568627451" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
     </resources>
 </document>
